# mercury-haskell-curriculum

./: .envrc.example  .gitignore  README.md  haskell-curriculum.cabal  hie.yaml
app/: Main.hs
nix/: extra-deps.nix  packages.nix  release.nix
src/: HaskellCurriculum.hs
src/HaskellCurriculum/Esqueleto/: Experimental.hs  Legacy.hs  Models.hs
src/HaskellCurriculum/Intro/: Transformers.hs
src/HaskellCurriculum/Yesod/: Application.hs  Foundation.hs  Orphans.hs
src/HaskellCurriculum/Yesod/Handler/: Home.hs
src/HaskellCurriculum/Yesod/Model/: User.hs
