cabal-version:      2.4
name:               haskell-curriculum
version:            0.1.0.0

synopsis: Code for the curriculum



author:             Luis Borjas Reyes
maintainer:         hello@lfborjas.com


extra-source-files: 

    README.md



-- Inspired by:
-- https://github.com/tchoutri/pg-entity/blob/e5fc4cfe8fcaf2a5a6d76f983c9a60b25a57777a/pg-entity.cabal 
common common-extensions
    default-extensions:
        DerivingStrategies
        DerivingVia
        DeriveGeneric
        DataKinds
        GeneralizedNewtypeDeriving
        NamedFieldPuns
        OverloadedStrings  
        TypeOperators
    default-language: Haskell2010

common common-ghc-options
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
    import: common-extensions
    import: common-ghc-options
    exposed-modules: 
      HaskellCurriculum
      -- from the Yesod track
      HaskellCurriculum.Yesod.Application
      HaskellCurriculum.Yesod.Foundation
      HaskellCurriculum.Yesod.Orphans
      HaskellCurriculum.Yesod.Handler.Home
      HaskellCurriculum.Yesod.Model.User
      -- from the Intermediate track
      HaskellCurriculum.Intermediate.TypeFamilies


    build-depends:    
      base >= 4.13 && <= 4.17
      , containers
      , time
      , bytestring
      , text
      , mtl
      , transformers
      , yesod
      , resource-pool
      , persistent-postgresql
      , persistent >=2.12
      , persistent-template
      , monad-logger
      , aeson
      , http-conduit
      , esqueleto

      
      

    hs-source-dirs:   src

executable haskell-curriculum-exe
    main-is: Main.hs
    build-depends:
      base
      , haskell-curriculum
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

